Udpate Effective CSharp Item 49

--- a/Document/C#/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
+++ b/Document/C#/Effective CSharp/EffectiveCSharp/EffectiveCSharp.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Item46.cs" />
     <Compile Include="Item47.cs" />
     <Compile Include="Item48.cs" />
+    <Compile Include="Item49.cs" />
     <Compile Include="MainProgram.cs" />
   </ItemGroup>
   <ItemGroup>
