--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj.filters
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj.filters
@@ -102,6 +102,12 @@
     <ClInclude Include="Item31.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item32.md">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Item33.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp">
