--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj.filters
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClInclude Include="Item37.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item38.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp">
