Update Effective STL Item 42

--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="Item39.h" />
     <ClInclude Include="Item40.h" />
     <ClInclude Include="Item41.h" />
+    <ClInclude Include="Item42.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
