--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="Item40.h" />
     <ClInclude Include="Item41.h" />
     <ClInclude Include="Item42.h" />
+    <ClInclude Include="Item43.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
