--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj.filters
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="Item43.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Item44.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp">
