Update Effective STL Item 46

--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="Item42.h" />
     <ClInclude Include="Item43.h" />
     <ClInclude Include="Item44.h" />
+    <ClInclude Include="Item46.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
