--- a/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
+++ b/Document/C++/EffectiveSTL/EffectiveSTL/EffectiveSTL/EffectiveSTL.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="Item44.h" />
     <ClInclude Include="Item46.h" />
     <ClInclude Include="Item47.h" />
+    <ClInclude Include="Item48.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EffectiveSTL.cpp" />
