--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Item02.cs" />
     <Compile Include="Item01.cs" />
     <Compile Include="Item03.cs" />
+    <Compile Include="Item04.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
