--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Item03.cs" />
     <Compile Include="Item04.cs" />
     <Compile Include="Item05.cs" />
+    <Compile Include="Item06.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
