Update More Effective CSharp item07

--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Item04.cs" />
     <Compile Include="Item05.cs" />
     <Compile Include="Item06.cs" />
+    <Compile Include="Item07.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
