--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Item05.cs" />
     <Compile Include="Item06.cs" />
     <Compile Include="Item07.cs" />
+    <Compile Include="Item08.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
