--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Item06.cs" />
     <Compile Include="Item07.cs" />
     <Compile Include="Item08.cs" />
+    <Compile Include="Item09.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
