Update Document C# Images

--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Item08.cs" />
     <Compile Include="Item09.cs" />
     <Compile Include="Item10.cs" />
+    <Compile Include="Item11.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
