--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Item09.cs" />
     <Compile Include="Item10.cs" />
     <Compile Include="Item11.cs" />
+    <Compile Include="Item12.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
