--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Item11.cs" />
     <Compile Include="Item12.cs" />
     <Compile Include="Item14.cs" />
+    <Compile Include="Item15.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
