Update More Effective CSharp Item16

--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Item12.cs" />
     <Compile Include="Item14.cs" />
     <Compile Include="Item15.cs" />
+    <Compile Include="Item16.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
