--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Item14.cs" />
     <Compile Include="Item15.cs" />
     <Compile Include="Item16.cs" />
+    <Compile Include="Item20.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
