Update More Effective CSharp Item22

--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Item15.cs" />
     <Compile Include="Item16.cs" />
     <Compile Include="Item20.cs" />
+    <Compile Include="Item22.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
