Update More Effective CSharp Item 24

--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Item20.cs" />
     <Compile Include="Item22.cs" />
     <Compile Include="Item23.cs" />
+    <Compile Include="Item24.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
