Update More Effective CSharp Item 26

--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Item23.cs" />
     <Compile Include="Item24.cs" />
     <Compile Include="Item25.cs" />
+    <Compile Include="Item26.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
