Update More Effective CSharp Item28

--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Item24.cs" />
     <Compile Include="Item25.cs" />
     <Compile Include="Item26.cs" />
+    <Compile Include="Item28.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
