Update More Effective CSharp Item 29

--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Item25.cs" />
     <Compile Include="Item26.cs" />
     <Compile Include="Item28.cs" />
+    <Compile Include="Item29.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
