--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Item28.cs" />
     <Compile Include="Item29.cs" />
     <Compile Include="Item32.cs" />
+    <Compile Include="Item34.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
