--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Item32.cs" />
     <Compile Include="Item34.cs" />
     <Compile Include="Item35.cs" />
+    <Compile Include="Item36.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
