Update More Effective CSharp Item37

--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Item34.cs" />
     <Compile Include="Item35.cs" />
     <Compile Include="Item36.cs" />
+    <Compile Include="Item37.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
