Update More Effective CSharp Item40

--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Item35.cs" />
     <Compile Include="Item36.cs" />
     <Compile Include="Item37.cs" />
+    <Compile Include="Item40.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
