--- a/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
+++ b/Document/C#/MoreEffectiveCSharp/MoreEffectiveCSharp/MoreEffectiveCSharp.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Item36.cs" />
     <Compile Include="Item37.cs" />
     <Compile Include="Item40.cs" />
+    <Compile Include="Item42.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
