--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "markdownlint.config": {
         "MD001" : false,
         "MD013": false,
-        "MD033": false
+        "MD033": false,
+        "MD036": false,
     }
 }
