--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "markdownlint.config": {
         "MD001" : false,
+        "MD024" : false,
         "MD013": false,
         "MD033": false,
         "MD036": false,
